fix(BurgerMenu): increase z-index

--- a/frontend/src/components/widgets/modal-window/burger-menu/burger-menu.scss
+++ b/frontend/src/components/widgets/modal-window/burger-menu/burger-menu.scss
@@ -4,7 +4,7 @@
     left: -100%;
     width: 300px;
     height: 100vh;
-    background: rgb(0, 0, 0);
+    background: #181818;
     color: white;
     transition: left 0.3s ease-in-out;
     z-index: 10;
@@ -24,10 +24,9 @@
         left: 250px;
         width: 300px;
         height: 100vh;
-        background: rgb(0, 0, 0); 
+        background: #181818; 
         color: white;
         transition: left 0.3s ease-in-out;
-        z-index: 10;
         display: flex;
 
             .line {
@@ -64,7 +63,6 @@
                 padding: 0;
                 justify-content: center;
                 height: 100vh;
-                // transition: color 0.3s ease, border-bottom 0.3s ease;
 
                 &__item-language {
                     display: flex;
@@ -74,6 +72,14 @@
                     padding-left: 20px;
                     font-size: 20px;
                     margin-bottom: 25px;
+                    span {
+                        cursor: pointer;
+                        transition: color 0.3s ease;
+
+                        &:hover {
+                            color: #b5e928;
+                        }
+                    }
                 }
         
                 &__item {
@@ -82,10 +88,26 @@
                     text-align: left;
                     width: 100%;
                     font-size: 30px;
-                    border-bottom: 2px solid transparent;
+                    position: relative;
+                    transition: color 0.3s ease;
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 0;
+                        height: 2px;
+                        background-color: #b5e928;
+                        transition: width 0.3s ease-in-out;
+                        transform-origin: left;
+                    }
+
                     &:hover {
                         color: #b5e928;
-                        border-bottom: 2px solid #b5e928;;
+                    }
+
+                    &:hover::after {
+                        width: 100%;
                     }
                 }
             }
